# GECO

./: build-deb.sh  gplv3-es.html  install.sh
doc/: README  doc.html  doc.txt
doc/novatica/: 01-introduccion.txt  02-desarrollo.txt  03-final.txt  03.1-colaboracion.txt  04-resumen.txt
src/: backend.py  database.py  unitests.py
src/gecoc/: change-master  gecolib.py  revelation_to_geco.py  setup.py  slowaes.py  terminal-geco  terminal-geco.py  utils.py
src/gecoc/debian/: changelog  control  rules
src/gecoc/geco-webclient/: Cargo.toml  Makefile  nightly.sh
src/gecoc/geco-webclient/src/: main.rs  model.rs
src/gecoc/geco-webclient/src/model/: list.rs  login.rs  mod.rs
src/gecoc/geco-webclient/src/updater/: context.rs  list.rs  login.rs  mod.rs  msg.rs
src/gecoc/geco-webclient/src/views/: header.rs  list.rs  login.rs  mod.rs  msgs.rs
src/gecoc/geco-webclient/static/: index.html
src/gecoc/geco@danigm.wadobo.com/: extension.js  gecojs.js  metadata.json  soupquery.js  stylesheet.css  utils.js
src/gecoc/gecoc/: gecolib.py  jsonclient.py  slowaes.py
src/gecoc/gtk-geco/: gecoc  gecosearch  gtk-geco  gtk-geco.py  gtkgeco.desktop  gtkgeco.py  setup.py
src/gecoc/keepass/: Pipfile  geco2keepass.py  slowaes.py
src/gecoc/qml-geco/: main.cpp  (+2 more)
src/gecod/: backend.py  database.py  gecod-xmlrpc  gecod-xmlrpc.conf.example  secure_xmlrpc.py  setup.py  xmlrpc_frontend.py
test_and_samples/: ejemploAES.py  javascriptAES.html  rvltoxml.py  simplexmlrpserver.py
test_and_samples/sqlalchemy/: all.py  database.sqlite  metaclass.py  tablas.py  test1.py  tutorial.db
(+64 files in other folders)
