[package]
authors = ["Daniel García Moreno <danigm@wadobo.com>"]
name = "geco-webclient"
version = "0.1.0"

[dependencies]
serde_json = "1.0.9"
stdweb = "0.3.0"
serde_derive = "1.0.27"
serde = "1.0.27"

[dependencies.yew]
#git = "https://github.com/DenisKolodin/yew.git"
git = "https://github.com/danigm/yew.git"
